src/test/who-am-i-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: who-am-i.info
      http:
        paths:
          - path: /
            backend:
              serviceName: who-am-i
              servicePort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.org
      http:
        paths:
          - path: /
            backend:
              serviceName: who-am-i
              servicePort: 80
